# veloinfo2

./: .dockerignore  .gitignore  .pgpass  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  dockerfile  import.lua  import.sh  package-lock.json  tailwind.config.js
.github/workflows/: docker-image.yml
db/: Dockerfile  dockerfile  init.sql  initdb-postgis.sh
martin/: config.yaml
migrations/: 20240113012342_installing_postgis_and_pgrouter.sql  20240116130300_create_cycleway.sql  20240118130300_create_cyclability_score_table.sql  20240118130824_create_bike_path_view.sql  20240119122934_score_becomes_a_float.sql  20240125124533_pass_to_array_way_ids_in_capabibity_score.sql  20240125141829_add_comment_to_score.sql  20240125145541_add_id_to_score.sql  20240210171102_add_index_to_way_id.sql  20240213102437_cyclability_score_history.sql  20240213133219_remove_cyclability_score_history.sql  20240215002717_timestamp_to_timestampz.sql  20240219145342_file_table.sql  20240220015731_drop_photo.sql  20240220015920_add_photo_to_score.sql  20240220231446_add_photo_thumbnail.sql  20240320232504_drop_view_bike_path.sql  20240427104310_geom_in_cyclability_score.sql  20240427111940_name__in_cyclability_score.sql  20240529003059_add_user.sql  20240529114743_add_user_to_score.sql
pub/: index.css  index.js  style.json  tailwind.css  veloinfo.webmanifest  webmanifest.json
src/: auth.rs  bike_path.rs  cycleway.rs  edit_buttons.rs  info_panel.rs  main.rs  node.rs  public.rs  score_selector_controler.rs  segment.rs  segment_panel.rs
src/component/: index_js.rs  info_panel.rs  menu.rs  mod.rs  photo_scroll.rs  point_panel.rs  route_panel.rs  score_circle.rs  score_selector.rs  search.rs  segment_panel.rs  style.rs
src/db/: address_range.rs  all_way.rs  cyclability_score.rs  cycleway.rs  edge.rs  mod.rs  photo.rs  search_db.rs  user.rs
templates/: edit-buttons.html  index.html  index.js  info_panel.html  info_panel_contribution.html  menu.html  photo_scroll.html  point_panel.html  route_panel.html  score_circle.html  score_option.html  score_selector.html  search.html  search_result.html  segment_panel.html  segment_panel_bigger.html  style.json  style2.json
