[package]
name = "veloinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = [] }
axum-extra = { version = "0.9.1", features = ["cookie", "typed-header"] }
futures = "0.3.30"
regex = "1.10.2"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
