[package]
name = "veloinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.2", features = ["multipart"] }
axum-extra = { version = "0.9.1", features = ["cookie", "typed-header"] }
axum-macros = "0.4.1"
chrono = { version = "0.4.34", features = ["unstable-locales"] }
chrono-tz = "0.8.6"
futures = "0.3.30"
image = "0.24.8"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
timeago = "0.4.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tower-livereload = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[profile.dev.package.sqlx-macros]
opt-level = 3
